--- a/react-app/src/index.css
+++ b/react-app/src/index.css
@@ -1,1 +1,20 @@
 /* TODO Add site wide styles */
+
+/* temp styles */
+
+.row {
+	display: flex;
+	flex-direction: row;
+	justify-content: space-between;
+}
+
+.mtop-15 {
+	margin-top: 15px;
+}
+
+.small-icon {
+	width: 25px;
+	height: 25px;
+	object-fit: cover;
+	border-radius: 999px;
+}
