--- a/react-app/src/components/ChannelMessages/ChannelMessages.css
+++ b/react-app/src/components/ChannelMessages/ChannelMessages.css
@@ -52,10 +52,10 @@
 	padding: 5px 20px;
 	border-radius: 6px;
 	margin: 10px 0px;
+	margin-right: 5px;
 }
 
 .msg-ct:hover {
-	cursor: pointer;
 	background-color: rgb(43, 45, 49);
 	border: 0;
 }
@@ -68,8 +68,32 @@
 .cms-msg-date {
 	font-size: 0.8rem;
 	color: #96989d;
+	margin-left: 10px;
 }
 
 .cms-msg-name {
 	color: rgb(171, 105, 199);
+}
+
+.cms-msg-name:hover {
+	cursor: pointer;
+	text-decoration: underline;
+}
+
+.cms-options {
+	margin-left: auto;
+	display: flex;
+	flex-direction: row;
+	font-size: 0.8rem;
+	margin-left: auto;
+}
+
+.cms-delete {
+	margin-left: 25px;
+}
+
+.cms-edit:hover,
+.cms-delete:hover {
+	cursor: pointer;
+	text-decoration: underline;
 }
