--- a/react-app/src/components/UserLanding/UserLanding.css
+++ b/react-app/src/components/UserLanding/UserLanding.css
@@ -12,8 +12,14 @@
 	padding-top: 16px;
 	padding-right: 20px;
 	/* width: 1186px; */
-	width: 100%;
+	width: 80%;
 	border-right: 1px solid red;
+}
+
+.UserLanding-server-members {
+	display: flex;
+	flex-direction: column;
+	width: 20%
 }
 
 .UserLanding-status {
