--- a/react-app/src/components/ServerMembers/ServerMembers.css
+++ b/react-app/src/components/ServerMembers/ServerMembers.css
@@ -4,6 +4,7 @@
     background-color: rgb(48,49,54);
     height: 100%;
     width: 230px;
+    padding: 0 5px;
 }
 
 .total-members {
@@ -12,9 +13,12 @@
 	color: rgba(211, 212, 214, 0.8);
     padding-top: 15px;
     padding-bottom: 10px;
+    padding-left: 5px;
 }
 
 h2 {
+    padding-left: 5px;
+    padding-bottom: 3px;
     font-size: 12px;
 	color: rgb(211, 212, 214, 0.8);
 }
@@ -29,9 +33,26 @@ p {
 }
 
 .individual-person {
-    padding: 2px;
+    padding: 5px 0;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    border-radius: 5px;
 }
 
 .individual-person:hover{
     background-color: #3f434a;
+    filter: brightness(1);
+    cursor: pointer;
+}
+
+.member-img {
+    border-radius: 50%;
+    height: 35px;
+    width: 35px;
+    padding: 0 5px;
+}
+
+.pending{
+    filter: brightness(0.5)
 }
