--- a/react-app/src/components/ChannelMessages/CMIndex/CMIndex.css
+++ b/react-app/src/components/ChannelMessages/CMIndex/CMIndex.css
@@ -71,15 +71,6 @@
 	margin-left: 10px;
 }
 
-.cms-msg-name {
-	color: rgb(171, 105, 199);
-}
-
-.cms-msg-name:hover {
-	cursor: pointer;
-	text-decoration: underline;
-}
-
 .cms-options {
 	margin-left: auto;
 	display: flex;
@@ -107,4 +98,35 @@
 	color: rgb(172, 163, 150);
 	font-size: 0.7rem;
 	margin-left: 10px;
+}
+
+.edit {
+	padding-bottom: 10px;
+	padding-top: 5px;
+}
+
+.icon {
+	height: 10px;
+	width: 10px;
+	object-fit: cover;
+	margin: 5px 1px 0px 5px;
+}
+
+.cms-member {
+	color: rgb(196, 122, 228);
+}
+
+.cms-admin {
+	color: rgb(103, 223, 147);
+}
+
+.cms-pending {
+	color: white;
+}
+
+.cms-member:hover,
+.cms-pending:hover,
+.cms-admin:hover {
+	cursor: pointer;
+	text-decoration: underline;
 }
