--- a/react-app/src/context/Modal.css
+++ b/react-app/src/context/Modal.css
@@ -1,7 +1,7 @@
 #modal, #menu-modal {
     position: fixed;
-    margin-top: 80px;
-    height: calc(100vh - 80px);
+    /* margin-top: 80px; */
+    /* height: calc(100vh - 80px); */
     top: 0;
     right: 0;
     left: 0;
@@ -47,7 +47,7 @@
     display: flex;
     justify-content: center;
     z-index: 99999;
-    border-radius: 12px;
+    /* border-radius: 12px; */
 }
 
 
