--- a/react-app/src/components/Servers/CreateServerForm/CreateServerForm.css
+++ b/react-app/src/components/Servers/CreateServerForm/CreateServerForm.css
@@ -13,13 +13,48 @@
   flex-direction: column;
   align-items: center;
   justify-content: center;
+  margin: 25px 0px;
 }
 
 .create-server-title {
+  font-size: 24px;
+  font-weight: 800;
+  margin-bottom: 10px;
 }
 
 .create-server-subtext {
   text-align: center;
+  color: #50565f;
+}
+
+.create-server-form-container {
+  width: 430px;
+}
+
+.create-server-form-title {
+  text-transform: uppercase;
+  color: #50565f;
+  font-weight: bold;
+  font-size: 12px;
+  margin-bottom: 5px;
+}
+
+.create-server-input {
+}
+
+.input-fields {
+  font-size: 14px;
+  padding: 5px 3px;
+  width: 99%;
+  border: none;
+  border-radius: 2px;
+  background-color: #e3e5e8;
+  margin-bottom: 10px;
+  resize: none;
+}
+
+.input-fields:focus {
+  outline: none;
 }
 
 .create-server-buttons-container {
@@ -27,4 +62,21 @@
   flex-direction: row;
   width: 100%;
   justify-content: space-between;
+  margin-bottom: 20px;
+}
+
+.create-server-button-cancel {
+  border: none;
+  background-color: transparent;
+  font-weight: bold;
+  text-align: left;
+  line-height: initial;
+}
+
+.create-server-button-submit {
+  border: none;
+  background-color: #5a65ea;
+  color: white;
+  padding: 12px 25px;
+  border-radius: 3px;
 }
