Lots of styling

--- a/react-app/src/components/ServerMembers/ServerMembers.css
+++ b/react-app/src/components/ServerMembers/ServerMembers.css
@@ -69,6 +69,15 @@ h2 {
     cursor: pointer;
 }
 
+.visible {
+    position: absolute;
+    right: 100px;
+}
+
+.hidden {
+    display: none;
+}
+
 .section {
     padding: 5px 0;
 }
