--- a/react-app/src/components/Channels/EditDeleteChannelModal/EditDeleteChannelModal.css
+++ b/react-app/src/components/Channels/EditDeleteChannelModal/EditDeleteChannelModal.css
@@ -59,3 +59,56 @@
     box-sizing: border-box;
     font-size: 16px;
 }
+
+.CreateChannelForm-button-delete:disabled {
+    color: #96989d;
+}
+
+.CreateChannelForm-button-delete.tooltip {
+    position: relative;
+  display: inline-block;
+  border-bottom: 1px dotted black;
+}
+
+.EditChannelForm-button-delete-text {
+    position: relative;
+    display: inline-block;
+}
+
+.tooltip .tooltiptext {
+    visibility: hidden;
+    width: 120px;
+    background-color: #18191c;
+    color: #fff;
+    text-align: center;
+    border-radius: 6px;
+    padding: 8px;
+    position: absolute;
+    z-index: 1;
+    bottom: 125%;
+    left: 50%;
+    margin-left: -60px;
+    opacity: 0;
+    transition: opacity 0.3s;
+}
+
+.tooltip .tooltiptext::after {
+    content: "";
+    position: absolute;
+    top: 100%;
+    left: 50%;
+    margin-left: -5px;
+    border-width: 5px;
+    border-style: solid;
+    border-color: #18191c transparent transparent transparent;
+}
+
+.tooltip:hover .tooltiptext {
+    visibility: visible;
+    opacity: 1;
+}
+
+/* .CreateChannelForm-button-delete:hover .EditChannelForm-button-delete-hover {
+    display: block;
+    position: absolute;
+} */
