--- a/react-app/src/components/Channels/CreateChannelForm/CreateChannelForm.css
+++ b/react-app/src/components/Channels/CreateChannelForm/CreateChannelForm.css
@@ -179,3 +179,94 @@ input:checked + .CreateChannelForm-private-slider-round:before {
     padding: 11px 16px;
     border-radius: 4px;
 }
+
+.CreateChannelForm-checkbox-container {
+    display: grid;
+    gap: 8px;
+    grid-template-columns: max-content min-content;
+    grid-template-rows: max-content;
+    align-items: center;
+}
+
+.CreateChannelForm-checkbox-container > input,
+.CreateChannelForm-checkbox-container > div {
+    grid-column: 2/3;
+    grid-row: 1/2;
+}
+
+.CreateChannelForm-checkbox {
+    width: 100%;
+    height: 100%;
+    appearance: none;
+    margin: 0;
+    padding: 0;
+}
+
+.CreateChannelForm-switch {
+    position: relative;
+    background: #70747a;
+    transition: 0.3s cubic-bezier(0.83, 0, 0.17, 1);
+    font-size: 1em;
+    width: 2em;
+    height: 1em;
+    padding: 5px;
+    border-radius: 9999px;
+    pointer-events: none;
+}
+
+.CreateChannelForm-checkbox:checked ~ .CreateChannelForm-switch {
+    background-color: #44b27e;
+}
+
+.CreateChannelForm-checkbox ~ .CreateChannelForm-switch > div {
+    position: relative;
+    left: 0;
+    height: 0.65em;
+    width: 0.65em;
+    background: white;
+    pointer-events: none;
+    transition: inherit;
+    border-radius: 9999px;
+
+    display: grid;
+    justify-items: stretch;
+    align-items: stretch;
+    padding: 0.2em;
+}
+
+.CreateChannelForm-checkbox:checked ~ .CreateChannelForm-switch > div {
+    left: calc(100%);
+    transform: translateX(-100%);
+    background: white;
+    display: grid;
+}
+
+.CreateChannelForm-checkbox ~ .CreateChannelForm-switch > div:before,
+.CreateChannelForm-checkbox ~ .CreateChannelForm-switch > div:after {
+  content: "";
+  transition: inherit;
+  background-color: #70747a;
+  grid-column: 1/2;
+  grid-row: 1/2;
+}
+
+.CreateChannelForm-checkbox:checked ~ .CreateChannelForm-switch > div:before,
+.CreateChannelForm-checkbox:checked ~ .CreateChannelForm-switch > div:after {
+  background-color: #44b27e;
+}
+
+.CreateChannelForm-checkbox ~ .CreateChannelForm-switch > div:before {
+  clip-path: polygon(20% 0%, 0% 20%, 80% 100%, 100% 80%);
+}
+
+.CreateChannelForm-checkbox:checked ~ .CreateChannelForm-switch > div:before {
+  clip-path: polygon(25% 75%, 33% 100%, 100% 20%, 80% 0%);
+}
+
+.CreateChannelForm-checkbox ~ .CreateChannelForm-switch > div:after {
+  clip-path: polygon(0% 80%, 20% 100%, 100% 20%, 80% 0%);
+}
+
+.CreateChannelForm-checkbox:checked ~ .CreateChannelForm-switch > div:after {
+  clip-path: polygon(20% 45%, 0% 65%, 33.33% 100%, 45% 75%);
+}
