--- a/react-app/src/components/ChannelMessages/CMIndex/CMIndex.css
+++ b/react-app/src/components/ChannelMessages/CMIndex/CMIndex.css
@@ -53,7 +53,6 @@
 	padding: 7px;
 	box-sizing: border-box;
 	font-size: 16px;
-	padding-bottom: 100px;
 	font-size: 1rem;
 	white-space: break-spaces;
 	line-height: 1.375rem;
@@ -88,11 +87,16 @@
 	flex-direction: row;
 	font-size: 0.8rem;
 	margin-left: auto;
+	display: none;
 }
 
 .msg-ct:hover {
 	background-color: rgba(43, 45, 49, 0.781);
 	border: 0;
+}
+
+.msg-ct:hover > .cms-msg-header > .cms-options {
+	display: flex;
 }
 
 .cms-delete {
