--- a/react-app/src/components/MainPage/ServerNav/ServerNav.css
+++ b/react-app/src/components/MainPage/ServerNav/ServerNav.css
@@ -111,8 +111,8 @@
 
 .ServerNav-icon {
   width: 100%;
-  max-height: 55px;
-  object-fit: cover;
+  aspect-ratio: 1;
+  /* object-fit: cover; */
   border-radius: 50%;
 }
 
