--- a/react-app/src/components/ChannelMessages/CMIndex/CMIndex.css
+++ b/react-app/src/components/ChannelMessages/CMIndex/CMIndex.css
@@ -47,10 +47,8 @@
 
 .cm-overflow {
 	/* position: relative; */
-	padding-top: 50px;
 	z-index: 0;
 	color: rgb(211, 212, 214);
-	padding: 7px;
 	box-sizing: border-box;
 	font-size: 16px;
 	font-size: 1rem;
@@ -68,6 +66,7 @@
 	border-radius: 6px;
 	margin: 10px 0px;
 	margin-right: 5px;
+	width: 100%;
 }
 
 .cms-msg-header {
@@ -90,7 +89,7 @@
 	display: none;
 }
 
-.msg-ct:hover {
+.justify:hover {
 	background-color: rgba(43, 45, 49, 0.781);
 	border: 0;
 }
@@ -149,4 +148,18 @@
 .cms-admin:hover {
 	cursor: pointer;
 	text-decoration: underline;
+}
+
+.pic-icon,
+.img-link {
+	height: 40px;
+	width: 40px;
+	object-fit: cover;
+	border-radius: 9999px;
+}
+
+.justify {
+	align-items: center;
+	padding-left: 5px;
+	padding: 0px 20px;
 }
