--- a/react-app/src/components/UserLanding/UserLanding.css
+++ b/react-app/src/components/UserLanding/UserLanding.css
@@ -7,16 +7,16 @@
 
 .reverse {
 	flex-direction: row-reverse;
+	justify-content: flex-end;
 }
 
 .UserLanding-main-content {
 	display: flex;
 	flex-direction: column;
-	margin: 0px 0px 0px 20px;
 	padding-top: 16px;
-	padding-right: 20px;
+	/* padding-right: 20px; */
 	/* width: 1186px; */
-	width: 80%;
+	width: 90%;
 }
 
 .UserLanding-server-members {
