--- a/react-app/src/components/UserLanding/UserLandingSideBar.css
+++ b/react-app/src/components/UserLanding/UserLandingSideBar.css
@@ -143,7 +143,7 @@ a.UserLanding-sidebar-channel-name {
     width: 32px;
     height: 32px;
     border-radius: 50%;
-    background-color: red;
+    /* background-color: red; */
     display: flex;
     justify-content: center;
     align-items: center;
