--- a/react-app/keenly-peter-src/components/MainPage/MainContent/MainContent.css
+++ b/react-app/keenly-peter-src/components/MainPage/MainContent/MainContent.css
@@ -1,5 +1,5 @@
 .MainContent-container {
-    width: 100%;
+    width: calc(100% - 72px);
     height: 100%;
     background-color: #36393f;
     /* border: 5px solid green; */
