--- a/react-app/src/components/ChannelMessages/CMIndex/CMIndex.css
+++ b/react-app/src/components/ChannelMessages/CMIndex/CMIndex.css
@@ -28,11 +28,26 @@
 	padding: 10px;
 }
 
-.cms-ch-name {
+/* .cms-ch-name {
 	color: rgb(211, 212, 214);
 	padding-bottom: 12px;
 	margin-bottom: 5px;
 	border-bottom: 1px solid #96989d5f;
+} */
+
+.cms-ch-name {
+	width: inherit;
+	height: 48px;
+	display: flex;
+	justify-content: space-between;
+	align-items: center;
+	padding: 12px 16px;
+	box-sizing: border-box;
+	border-bottom: 1px;
+	color: #ffffff;
+	box-shadow: 0 1px 0 hsl(240 11.1% 1.8% / 0.2),
+    0 1.5px 0 hsl(240 7.7% 2.5%/0.05), 0 2px 0 hsl(240 11.1% 1.8%/0.05);
+
 }
 
 .submit-cm {
