--- a/react-app/src/components/ServerMembers/ServerMembers.css
+++ b/react-app/src/components/ServerMembers/ServerMembers.css
@@ -4,7 +4,6 @@
 	background-color: rgb(48, 49, 54);
 	height: 100%;
 	width: 230px;
-	padding: 0 5px;
 	overflow: hidden;
 }
 
@@ -35,21 +34,38 @@
 	overflow: hidden;
 }
 
+.server-members-header {
+	width: 100%;
+	height: 48px;
+	display: flex;
+	justify-content: space-between;
+	align-items: center;
+	/* padding: 12px 16px; */
+	box-sizing: border-box;
+	border-bottom: 1px;
+	color: #ffffff;
+	background-color: #36393f;
+	box-shadow: 0 1px 0 hsl(240 11.1% 1.8% / 0.2),
+		0 1.5px 0 hsl(240 7.7% 2.5%/0.05), 0 2px 0 hsl(240 11.1% 1.8%/0.05);
+
+}
+
 .total-members {
 	font-size: 15px;
-	width: 100%;
+	width: calc(100% - 20px);
 	color: rgba(211, 212, 214, 0.8);
 	padding-top: 15px;
 	padding-bottom: 10px;
 	padding-left: 5px;
 }
 
-h2 {
+/* h2 {
+	width: 230px;
 	padding-left: 5px;
 	padding-bottom: 3px;
 	font-size: 12px;
 	color: rgb(211, 212, 214, 0.8);
-}
+} */
 
 .owner.nicknames {
 	color: rgb(103, 223, 147);
@@ -103,6 +119,7 @@ h2 {
 	flex-direction: row;
 	align-items: center;
 	border-radius: 5px;
+	width: calc(100% - 20px);
 }
 
 .individual-person:hover {
@@ -127,4 +144,24 @@ h2 {
 	height: 12px;
 	padding-top: 2px;
 	padding-left: 5px;
+}
+
+.owner-div.section,
+.admin-div.section,
+.pending-div.section {
+	width: calc(100% - 10px);
+}
+
+.ServerMembers-headers {
+	width: calc(100% - 20px);
+	width: 230px;
+	padding-left: 5px;
+	padding-bottom: 3px;
+	font-size: 12px;
+	color: rgb(211, 212, 214, 0.8);
+}
+
+h2 {
+	padding: 0;
+	margin: 0;
 }
