--- a/react-app/src/components/MainPage/MainContent/MainContent.css
+++ b/react-app/src/components/MainPage/MainContent/MainContent.css
@@ -1,7 +1,8 @@
 .MainContent-container {
-    width: 100%;
-    height: 100%;
-    background-color: #36393f;
-    /* border: 5px solid green; */
-    /* flex-grow: 1; */
+  width: 100%;
+  height: 100vh;
+  background-color: #36393f;
+  overflow-y: hidden;
+  /* border: 5px solid green; */
+  /* flex-grow: 1; */
 }
