--- a/react-app/src/components/MainPage/MainPage.css
+++ b/react-app/src/components/MainPage/MainPage.css
@@ -1,7 +1,8 @@
 .MainPage-container {
-    width: 100vw;
-    height: 100vh;
-    display: flex;
-    flex-direction: row;
-    /* box-sizing: border-box; */
+  width: 100%;
+  height: 100%;
+  display: flex;
+  flex-direction: row;
+  /* overflow-y: hidden; */
+  /* box-sizing: border-box; */
 }
