--- a/react-app/src/components/UserLanding/UserLandingSideBar.css
+++ b/react-app/src/components/UserLanding/UserLandingSideBar.css
@@ -194,3 +194,12 @@ a.UserLanding-sidebar-channel-name {
   color: #2a2b2f;
   text-align: left;
 }
+
+.UserLanding-sidebar-channel-user-home:hover {
+  border-top-left-radius: 3px;
+  border-top-right-radius: 3px;
+}
+.UserLanding-sidebar-channel-user-logout:hover {
+  border-bottom-left-radius: 3px;
+  border-bottom-right-radius: 3px;
+}
