--- a/react-app/src/components/ServerMembers/RoleEdit.css
+++ b/react-app/src/components/ServerMembers/RoleEdit.css
@@ -1,23 +1,20 @@
-.edit-nickname-div {
+.edit-role-div {
     display: flex;
     flex-direction: row;
     justify-content: space-between;
     width: 100%;
 }
 
-.nickname-input {
+.role-input {
     background-color: #3f434a;
     color: white;
     border: none;
 }
 
-.save-nickName-button {
+.save-role-button {
     border: none;
     color: white;
     background-color: rgb(24,25,28);
     font-family: "Roboto";
-}
-
-.save-nickName-button {
     font-size: 11px;
 }
