--- a/react-app/src/components/Servers/ServerIndex/ServerIndex.css
+++ b/react-app/src/components/Servers/ServerIndex/ServerIndex.css
@@ -1,53 +1,72 @@
-.exp-ct {
-	margin: 0px;
-	/* margin: 0px auto auto auto; */
+.explorer-container {
+  display: flex;
+  flex-direction: column;
+  width: 95%;
 }
 
 .servers-icon {
-	height: 150px;
-	width: 180px;
-	border-radius: 7px;
-	object-fit: cover;
+  height: 150px;
+  width: 180px;
+  border-radius: 7px;
+  object-fit: cover;
 }
 
-.exp-img {
-	height: auto;
-	max-height: 400px;
-	width: 100%;
-	object-fit: cover;
-	border-radius: 9px;
+.explorer-img {
+  height: auto;
+  /* width: 100%; */
+  max-height: 400px;
+  object-fit: cover;
+  border-radius: 9px;
 }
 
-.mtop-15 {
-	margin-top: 15px;
+.explorer-banner-container {
+  margin: 15px 10px;
+  /* width: 100%; */
+}
+
+.explorer-banner-header {
+  font-size: 18px;
+  font-weight: bold;
+  margin: 15px 10px;
 }
 
 .exp-link {
-	/* margin: auto; */
-	cursor: pointer;
+  /* margin: auto; */
+  cursor: pointer;
 }
 
 .exp-link:hover {
-	color: rgb(255, 121, 121);
+  color: rgb(255, 121, 121);
 }
 
 .exp-bk {
-	width: 100%;
-	/* height: 100%; */
-	background-color: rgba(0, 0, 0, 0.866);
-	color: white;
-	display: flex;
-	flex-direction: row;
+  width: 100%;
+  /* height: 100%; */
+  background-color: rgba(0, 0, 0, 0.866);
+  color: white;
+  display: flex;
+  flex-direction: row;
 }
 
-.exp-servers-ct {
-	display: flex;
-	flex-direction: row;
-	word-wrap: break-word;
+.explorer-banner-server-container {
+  margin: 15px 10px;
+  width: 100%;
+  /* display: flex; */
+  flex-direction: row;
+  word-wrap: break-word;
 }
 
 .exp-serv {
-	width: inherit;
-	max-width: 300px;
-	height: max-content;
+  width: inherit;
+  max-width: 300px;
+  height: max-content;
+}
+
+.explorer-server-container {
+  border: 1px solid red;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  width: 300px;
 }
