--- a/react-app/src/components/UserLanding/UserLanding.css
+++ b/react-app/src/components/UserLanding/UserLanding.css
@@ -3,6 +3,7 @@
   height: 100%;
   display: flex;
   flex-direction: row;
+  padding-top: 5px;
 }
 
 .reverse {
@@ -22,7 +23,7 @@
 .UserLanding-server-members {
   display: flex;
   flex-direction: column;
-  height: 100vh;
+  height: calc(100% + 5px);
   width: 230px;
 }
 
