--- a/react-app/src/components/UserLanding/UserLandingSideBar.css
+++ b/react-app/src/components/UserLanding/UserLandingSideBar.css
@@ -18,6 +18,7 @@
   justify-content: space-between;
   align-items: center;
   padding: 12px 16px;
+  margin-top: 5px;
   box-sizing: border-box;
   border-bottom: 1px;
   color: #ffffff;
