--- a/react-app/src/components/ServerMembers/RoleEdit.css
+++ b/react-app/src/components/ServerMembers/RoleEdit.css
@@ -1,6 +1,6 @@
 .edit-role-div {
     display: flex;
-    flex-direction: row;
+    flex-direction: column;
     justify-content: space-between;
     width: 100%;
 }
@@ -11,10 +11,32 @@
     border: none;
 }
 
+.role-button {
+    padding-top: 14px;
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    padding-left: 5px;
+}
+
 .save-role-button {
     border: none;
     color: white;
-    background-color: rgb(24,25,28);
+    /* background-color: rgb(24,25,28); */
     font-family: "Roboto";
-    font-size: 11px;
+    font-size: 15px;
+    background-color: #3f434a;
+    width: 70px;
+    
+}
+
+.cancel-role-button {
+    border: none;
+    color: white;
+    /* background-color: rgb(24,25,28); */
+    background-color: #3f434a;
+    font-family: "Roboto";
+    font-size: 15px;
+    width: 70px;
+    margin-bottom: 8px;
 }
