--- a/react-app/src/components/ServerMembers/ServerMembers.css
+++ b/react-app/src/components/ServerMembers/ServerMembers.css
@@ -67,7 +67,7 @@
 	color: rgb(211, 212, 214, 0.8);
 } */
 
-.owner.nicknames {
+/* .owner.nicknames {
 	color: rgb(103, 223, 147);
 }
 
@@ -81,7 +81,7 @@
 
 .pending.nicknames {
 	color: white;
-}
+} */
 
 .nicknames {
     font-size: 15px;
@@ -92,6 +92,24 @@
 	color: rgb(25, 188, 155);
 	background-color: rgb(48, 49, 54);
 	border: none;
+}
+
+#owner.individual-person button {
+	/* color: rgb(103, 223, 147); */
+	color: rgb(25, 188, 155);
+}
+
+#admin.individual-person button {
+	/* color: rgb(103, 223, 147); */
+	color: rgb(25, 188, 155);
+}
+
+#member.individual-person button {
+	color: rgb(196, 122, 228);
+}
+
+#pending.individual-person button {
+	color: white;
 }
 
 .individual-person button:hover {
@@ -119,7 +137,7 @@
 	flex-direction: row;
 	align-items: center;
 	border-radius: 5px;
-	width: calc(100% - 20px);
+	width: 100%;
 }
 
 .individual-person:hover {
@@ -135,6 +153,7 @@
 	padding: 0 5px;
 	object-fit: cover;
 }
+
 
 .pending {
 	filter: brightness(0.5);
